--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "n8n": "docker-compose up -d",
+    "n8n:build": "docker-compose build --no-cache nextjs",
     "n8n:stop": "docker-compose down",
     "n8n:logs": "docker-compose logs -f",
     "n8n:restart": "docker-compose restart",
