--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   n8n:
     image: n8nio/n8n
@@ -52,11 +51,11 @@ services:
       dockerfile: Dockerfile
     container_name: nextjs
     volumes:
-      - ./web-manager:/usr/src/app
+      - nextjs_data:/usr/src/app
     ports:
       - "3000:3000"
-    environment:
-      - MONGO_URI=mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongodb:27017/${MONGO_DB_NAME}
+    environment: 
+      - MONGODB_URI="mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongodb:27017/${MONGO_DB_NAME}"
     depends_on:
       - mongodb
     networks:
@@ -65,6 +64,7 @@ volumes:
   n8n_data:  # Déclare un volume pour stocker les données N8N
   ollama_data:
   mongo_data:
+  nextjs_data:
 networks:
   ai_net:
     driver: bridge
