--- a/web-manager/Dockerfile
+++ b/web-manager/Dockerfile
@@ -29,6 +29,7 @@ ENV NODE_ENV=development
 COPY . .
 RUN rm -rf node_modules
 RUN rm -rf .next
+RUN rm .env
 RUN npm install
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
