--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     ports:
       - "3000:3000"
     environment: 
-      - MONGODB_URI=mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@mongodb:27017/${MONGO_DB_NAME}?authSource=admin
+      - MONGODB_URI=mongodb://${MONGO_DB_NAME}:${MONGO_DB_PASSWORD}@mongodb:27017/${MONGO_DB_NAME}
     depends_on:
       - mongodb
     networks:
