feat: client notification panel

--- a/web-manager/package.json
+++ b/web-manager/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "@reduxjs/toolkit": "^2.8.1",
     "dotenv": "^16.5.0",
+    "lucide-react": "^0.511.0",
     "mongoose": "^8.14.1",
     "next": "15.3.2",
     "react": "^19.0.0",
