--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - N8N_RUNNERS_ENABLED=true
       - VUE_APP_URL_BASE_API=http://localhost:5678
       - NODE_FUNCTION_ALLOW_BUILTIN=*
-      - NODE_FUNCTION_ALLOW_EXTERNAL=cheerio
+      - NODE_FUNCTION_ALLOW_EXTERNAL=htmlparser2,domutils
     ports:
       - 5678:5678
     volumes:
@@ -157,6 +157,19 @@ services:
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - vector
+    networks:
+      - ai_net
+
+  # Puppeteer service for web scraping
+  puppeteer:
+    build:
+      context: ./http-request-operator
+    container_name: puppeteer
+    ports:
+      - "3200:3000"
+    environment:
+      - NODE_ENV=production
+    restart: unless-stopped
     networks:
       - ai_net
 
