--- a/web-manager/package.json
+++ b/web-manager/package.json
@@ -1,13 +1,13 @@
 {
   "name": "web-manager",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.3",
