chore: clean code in n8n dockerfile

--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -1,18 +1,17 @@
-# ---- build stage ----
 FROM n8nio/n8n:latest AS base
 
-# Dossier local contenant tes .json
+# Copy credentials & Workflows folder
 COPY workflows /tmp/workflows
 COPY credentials /tmp/credentials
 
-# L’utilisateur « node » possède déjà les droits sur /home/node
-USER node
-
-# Import des workflows dans la BDD SQLite embarquée
+# Import workflows
 RUN for f in /tmp/workflows/*.json; do \
       echo "→ importing $f"; \
       n8n import:workflow --input "$f"; \
     done
 
+# Activate all workflows
 RUN n8n update:workflow --all --active=true
+
+# Import credentials
 RUN n8n import:credentials --input=/tmp/credentials/oauth-credentials.json
