--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run n8n",
     "stop": "npm run n8n:stop",
+    "restart": "npm run stop && npm run n8n:rebuild:nextjs && npm run start",
     "n8n": "docker-compose up -d",
     "n8n:build": "docker-compose build",
     "n8n:rebuild": "docker-compose build --no-cache",
