--- a/web-manager/package.json
+++ b/web-manager/package.json
@@ -10,32 +10,33 @@
     "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.3",
-    "@reduxjs/toolkit": "^2.8.1",
-    "dotenv": "^16.5.0",
-    "framer-motion": "^12.12.1",
+    "@headlessui/react": "^2.2.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "dotenv": "^16.6.1",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.511.0",
-    "mongoose": "^8.14.1",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "mongoose": "^8.16.4",
+    "next": "^15.4.2",
+    "preline": "^3.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.19.9",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/sanitize-html": "^2.16.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.2",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.3.2",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.11",
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.8.3"
   }
 }
