--- a/web-manager/package.json
+++ b/web-manager/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.9",
