build: update MongoDB environment variables in .env.local and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_ROOT_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
       - MONGO_INITDB_DATABASE=${MONGO_DB_NAME}
-      - MONGO_NON_ROOT_USERNAME=${MONGO_DB_NAME}
+      - MONGO_NON_ROOT_USERNAME=${MONGO_DB_USER}
       - MONGO_NON_ROOT_PASSWORD=${MONGO_DB_PASSWORD}
     volumes:
       - mongo_config:/data/configdb
